[package]
name = "day2"
version = "0.1.0"
authors = ["Chris Ballinger <chrisballinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-static-include = "*"
lazy_static = "*"
enum_primitive = "*"
num = "*"
